--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@radix-ui/react-tooltip": "^1.2.0",
     "@tanstack/react-query": "^5.74.0",
     "@xyflow/react": "^12.5.6",
+    "cheerio": "^1.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -50,6 +51,7 @@
     "lucide-react": "^0.487.0",
     "next": "14.2.25",
     "next-themes": "^0.4.6",
+    "puppeteer": "^24.6.1",
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
