--- a/package.json
+++ b/package.json
@@ -51,8 +51,10 @@
     "lucide-react": "^0.487.0",
     "next": "14.2.25",
     "next-themes": "^0.4.6",
+    "nextjs-toploader": "^3.8.16",
     "puppeteer": "^24.6.1",
     "react": "^18",
+    "react-countup": "^6.5.3",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.55.0",
