--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "next": "14.2.25",
     "next-themes": "^0.4.6",
     "nextjs-toploader": "^3.8.16",
+    "openai": "^4.96.0",
     "puppeteer": "^24.6.1",
     "react": "^18",
     "react-countup": "^6.5.3",
